--- a/src/app/layout/home/home.component.scss
+++ b/src/app/layout/home/home.component.scss
@@ -182,6 +182,6 @@
     height: auto;
     border-right: none;
     border-top: 1px solid rgba(255, 255, 255, 0.08);
-    padding: 1.5rem 1rem 3.5rem;
+    padding: 1.5rem 1rem;
   }
 }
